Popravljene povezave do repozitorijev
Co-authored-by: Janoš Vidali <janos.vidali@fmf.uni-lj.si>

--- a/zapiski/2020-21/2020-10-12.md
+++ b/zapiski/2020-21/2020-10-12.md
@@ -22,17 +22,17 @@ C2 --- C3a --- C4
 
 ### Repozitoriji
 
-* Janoš Vidali: https://github.com/jaanos/podatkovne-baze-1
-* Luka Šešet: https://github.com/ZacetekVaj/PodatkovneBaze
-* Tamara Pogačar: https://github.com/TPogacar/podatkovne_baze_1
-* Denis Benčič: https://github.com/DenisBencic/PB1
-* Marej Čušin: https://github.com/CusinM15/PB1
-* Andrej Treven in Peter Rotar: https://github.com/SmokeyAjax/Chad-baze-1
-* Martin Ogrin (in Miha Petek): https://github.com/StonyTark/PB1-projekt
-* Saša Ošlaj:https://github.com/SashaOslaj/Projekt-pri-podatkovnih-bazah-1
-* Tina Savarin: https://github.com/TinaKrasovec/PB1
-* Hana Kranjec Kelbel : https://github.com/hanaKel/pb-1
-* David Adamič: https://github.com/DavidAdamic/Podatkovne-baze-1
+* Janoš Vidali: <https://github.com/jaanos/podatkovne-baze-1>
+* Luka Šešet: <https://github.com/ZacetekVaj/PodatkovneBaze>
+* Tamara Pogačar: <https://github.com/TPogacar/podatkovne_baze_1>
+* Denis Benčič: <https://github.com/DenisBencic/PB1>
+* Marej Čušin: <https://github.com/CusinM15/PB1>
+* Andrej Treven in Peter Rotar: <https://github.com/SmokeyAjax/Chad-baze-1>
+* Martin Ogrin (in Miha Petek): <https://github.com/StonyTark/PB1-projekt>
+* Saša Ošlaj: <https://github.com/SashaOslaj/Projekt-pri-podatkovnih-bazah-1>
+* Tina Savarin: <https://github.com/TinaKrasovec/PB1>
+* Hana Kranjec Kelbel: <https://github.com/hanaKel/pb-1>
+* David Adamič: <https://github.com/DavidAdamic/Podatkovne-baze-1>
 
 ## SQLiteStudio
 
