Dodani zapiski z vaj
Co-authored-by: Janoš Vidali <janos.vidali@fmf.uni-lj.si>

--- a/zapiski/2020-21/2020-10-19.md
+++ b/zapiski/2020-21/2020-10-19.md
@@ -7,3 +7,14 @@ hackmd: https://hackmd.io/twCVcxg0QVCyu74_ciJ9qQ
 ---
 
 ## Uvod v SQL
+
+```sql
+SELECT stolpec, st1*st2+st3 AS ime_stolpca
+FROM tabela
+WHERE (stolpec = vrednost AND stolpec LIKE '_=%') -- npr. 'a=nekaj'
+   OR (1+1 = 2 AND st2 = st3)
+  AND stolpec IN (
+    SELECT ... -- en stolpec
+  )
+ORDER BY stolpec [ASC | DESC], st2 ...
+```
