Popravljene glave blokov kode
Co-authored-by: Janoš Vidali <janos.vidali@fmf.uni-lj.si>

--- a/zapiski/2020-21/2020-11-23.md
+++ b/zapiski/2020-21/2020-11-23.md
@@ -1,6 +1,7 @@
 ---
 tags: vaje, pb1, projekti, načrtovanje
 hackmd: https://hackmd.io/Bc55T-PfTTmpbHVFSWG6QQ
+plugins: mermaid
 ---
 # Podatkovne baze 1 - vaje 23.11.2020
 
@@ -14,7 +15,7 @@ hackmd: https://hackmd.io/Bc55T-PfTTmpbHVFSWG6QQ
 - premislita, ali naj bosta povzročitelj in prejemnik referenci na entiteto *podjetje*
 - dodajta entiteto *vrsta* z ustreznimi atributi
 
-```sql=sqlite
+```sql
 CREATE TABLE podjetje (
   id INTEGER PRIMARY KEY AUTOINCREMENT,
   ime TEXT NOT NULL,
@@ -50,7 +51,7 @@ CREATE TABLE odpadek (
 
 ![](https://raw.githubusercontent.com/15minutOdmora/Generator-filmov/main/slike/ERModel.PNG)
 
-```sql=mysql
+```sql
 CREATE TABLE zvezdnik (
   idZvezdnik INT PRIMARY KEY AUTO_INCREMENT,
   ime TEXT NOT NULL,
