Dodana vsebina z vaj
Co-authored-by: Janoš Vidali <janos.vidali@fmf.uni-lj.si>

--- a/zapiski/2021-22/2021-10-14.md
+++ b/zapiski/2021-22/2021-10-14.md
@@ -11,11 +11,26 @@ hackmd: https://hackmd.io/_c8p4SFEQPKOvq6DPOXvDA
 * Namestimo [Visual Studio Code](https://code.visualstudio.com/)
 * V VS Code namestimo razširitev za Python
 
-## GitHub & VS Code
+## GitHub
 
 * Prijavimo se na [GitHub](https://github.com) in ustvarimo repozitorij
 * Damo pravico pisanja sošolcu
 * Repozitorij uvozimo v VS Code
+
+Repozitoriji:
+* Janoš Vidali: https://github.com/jaanos/podatkovne-baze-1
+* Damijan Randl: https://github.com/RandlD19/projekt-pb1
+* Tit Arnšek: https://github.com/titoo1234/projekt_pb1
+* Luka Toplak: https://github.com/LukaFMF/PodatkoveBaze1
+* Ana Berdnik: https://github.com/anaberdnik/projekt-pb1
+* Tomaž Tratnik: https://github.com/tratk/podatkovne-baze
+* Jure Lilija: https://github.com/Argonfmf/projekt-pb1
+* Andreja Lapajne: https://github.com/lapajnea/pp_1
+* Klavdija Koren: https://github.com/KlavdijaKoren/vaje_pb1_14.10.
+* Martina Spasić: https://github.com/Martina333/PB-vaje
+* Benisa Risović https://github.com/benisa21/podatkovne_baze_projekt
+
+![](https://jaanos.github.io/podatkovne-baze-1/zapiski/2021-22/2021-10-14/commits.png)
 
 ## SQLiteStudio
 
@@ -25,8 +40,31 @@ hackmd: https://hackmd.io/_c8p4SFEQPKOvq6DPOXvDA
 
 ## Osnovne poizvedbe
 
+```sql
+SELECT stolpec1, stolpec2, stolpec3+stolpec4, ..., *
+FROM tabela
+WHERE pogoj AND (stolpec1 > 100 OR stolpec2 = 'niz')
+ORDER BY stolpec1 ASC, stolpec2 DESC
+LIMIT število;
+```
+
 1. Izpiši vse filme iz leta 1950.
+
+   ```sql
+   SELECT * FROM film
+   WHERE leto = 1950;
+   ```
 
 2. Izpiši imena vseh žanrov.
 
+   ```sql
+   SELECT naziv FROM zanr;
+   ```
+
 3. Izpiši imena prvih 10 oseb v abecednem vrstnem redu.
+
+   ```sql
+   SELECT ime FROM oseba
+   ORDER BY ime
+   LIMIT 10;
+   ```
