Popravljene povezave do repozitorijev

--- a/zapiski/2021-22/2021-10-14.md
+++ b/zapiski/2021-22/2021-10-14.md
@@ -18,17 +18,17 @@ hackmd: https://hackmd.io/_c8p4SFEQPKOvq6DPOXvDA
 * Repozitorij uvozimo v VS Code
 
 Repozitoriji:
-* Janoš Vidali: https://github.com/jaanos/podatkovne-baze-1
-* Damijan Randl: https://github.com/RandlD19/projekt-pb1
-* Tit Arnšek: https://github.com/titoo1234/projekt_pb1
-* Luka Toplak: https://github.com/LukaFMF/PodatkoveBaze1
-* Ana Berdnik: https://github.com/anaberdnik/projekt-pb1
-* Tomaž Tratnik: https://github.com/tratk/podatkovne-baze
-* Jure Lilija: https://github.com/Argonfmf/projekt-pb1
-* Andreja Lapajne: https://github.com/lapajnea/pp_1
-* Klavdija Koren: https://github.com/KlavdijaKoren/vaje_pb1_14.10.
-* Martina Spasić: https://github.com/Martina333/PB-vaje
-* Benisa Risović https://github.com/benisa21/podatkovne_baze_projekt
+* Janoš Vidali: <https://github.com/jaanos/podatkovne-baze-1>
+* Damijan Randl: <https://github.com/RandlD19/projekt-pb1>
+* Tit Arnšek: <https://github.com/titoo1234/projekt_pb1>
+* Luka Toplak: <https://github.com/LukaFMF/PodatkoveBaze1>
+* Ana Berdnik: <https://github.com/anaberdnik/projekt-pb1>
+* Tomaž Tratnik: <https://github.com/tratk/podatkovne-baze>
+* Jure Lilija: <https://github.com/Argonfmf/projekt-pb1>
+* Andreja Lapajne: <https://github.com/lapajnea/pp_1>
+* Klavdija Koren: <https://github.com/KlavdijaKoren/vaje_pb1_14.10.>
+* Martina Spasić: <https://github.com/Martina333/PB-vaje>
+* Benisa Risović <https://github.com/benisa21/podatkovne_baze_projekt>
 
 ![](https://jaanos.github.io/podatkovne-baze-1/zapiski/2021-22/2021-10-14/commits.png)
 
