Popravki sledi in baze
Co-authored-by: Janoš Vidali <janos.vidali@fmf.uni-lj.si>

--- a/zapiski/2021-22/2021-12-13.md
+++ b/zapiski/2021-22/2021-12-13.md
@@ -100,9 +100,12 @@ In [22]: with conn:
 IntegrityError                            Traceback (most recent call last)
 <ipython-input-22-e4c1fc5bcd4e> in <module>
       1 with conn:
-      2     cur.execute("INSERT INTO tabela (ime, geslo) VALUES ('student', 'ŠtudentskoGeslo')")
-----> 3     cur.execute("INSERT INTO tabela VALUES (1, 'ime', 'geslo')")
-      4 
+      2     cur.execute("""
+      3         INSERT INTO tabela (ime, geslo)
+      4         VALUES ('student', 'ŠtudentskoGeslo')
+      5     """)
+----> 6     cur.execute("INSERT INTO tabela VALUES (1, 'ime', 'geslo')")
+      7 
 
 IntegrityError: UNIQUE constraint failed: tabela.id
 
@@ -231,7 +234,10 @@ In [53]: print(f"""
     WHERE ime = 'matija' AND geslo = '' OR 1 = 1; --'
 
 # Ker AND veže močneje kot OR, obvelja 1 = 1,
-# del poizvedbe za podpičjem pa je zakomentiran in se ignorira
+# del poizvedbe za podpičjem pa je zakomentiran in se ignorira.
+# Prišlo je do napada SQL injection,
+# pri katerem napadalec z ustreznim vnosom
+# vstavi svojo logiko v stavek SQL.
 
 # Za varno vstavljanje podatkov te navedemo v drugem argumentu metode execute,
 # v sami poizvedbi pa pišemo vprašaje
@@ -411,7 +417,8 @@ CREATE TABLE ekipa (
     sezona TEXT CHECK (sezona LIKE '____/__'),
     klub INTEGER REFERENCES klub (id),
     igralec INTEGER REFERENCES igralec (id),
-    PRIMARY KEY (sezona, klub, igralec)
+    PRIMARY KEY (sezona, klub, igralec), -- za sklicevanje
+    UNIQUE (sezona, igralec) -- igralec je v posamezni sezoni lahko le v enem klubu
 );
 
 CREATE TABLE stadion (
@@ -425,36 +432,39 @@ CREATE TABLE tekma (
     sezona TEXT CHECK (sezona LIKE '____/__'),
     datum DATE NOT NULL,
     stadion INTEGER REFERENCES stadion (id),
-    UNIQUE (id, sezona)
+    UNIQUE (id, sezona) -- da se lahko sklicujemo na ta dva stolpca
 );
 
 CREATE TABLE igra_klub (
     tekma INTEGER,
     sezona TEXT,
     klub INTEGER REFERENCES klub (id),
-    tip TEXT CHECK (tip IN ('domači', 'gostje'))
+    tip TEXT NOT NULL CHECK (tip IN ('domači', 'gostje')),
     FOREIGN KEY (tekma, sezona) REFERENCES tekma (id, sezona),
-    PRIMARY KEY (tekma, sezona, klub),
-    UNIQUE (tekma, tip)
+    PRIMARY KEY (tekma, sezona, klub), -- za sklicevanje
+    UNIQUE (tekma, tip) -- na vsaki tekmi je en domači in en gostujoči klub
 );
 
 CREATE TABLE igra_igralec (
     tekma INTEGER,
-    sezona TEXT,
+    sezona TEXT NOT NULL,
     klub INTEGER,
     igralec INTEGER,
-    FOREIGN KEY (tekma, sezona, klub) REFERENCES igra_klub (tekma, sezona, klub),
-    FOREIGN KEY (sezona, klub, igralec) REFERENCES ekipa (sezona, klub, igralec)
+    FOREIGN KEY (tekma, sezona, klub)        -- klub je odigral tekmo
+        REFERENCES igra_klub (tekma, sezona, klub),  -- v neki sezoni
+    FOREIGN KEY (sezona, klub, igralec) -- igralec je član tega kluba
+        REFERENCES ekipa (sezona, klub, igralec),    -- v isti sezoni
+    PRIMARY KEY (tekma, klub, igralec) -- sezona je odvisna od tekme in je ne potrebujemo v glavnem ključu
 );
 
 CREATE TABLE zadetek (
-    id INTEGER PRIMARY KEY AUTOINCREMENT
-    tekma INTEGER,
-    sezona TEXT,
-    klub INTEGER,
-    igralec INTEGER,
+    id INTEGER PRIMARY KEY AUTOINCREMENT,
+    tekma INTEGER NOT NULL,
+    klub INTEGER NOT NULL,
+    igralec INTEGER NOT NULL,
     minuta INTEGER,
-    FOREIGN KEY (tekma, sezona, klub, igralec) REFERENCES igra_igralec (tekma, sezona, klub, igralec)
+    FOREIGN KEY (tekma, klub, igralec) -- igralec je igral na tej tekmi
+        REFERENCES igra_igralec (tekma, klub, igralec)    -- za ta klub
 );
 ```
 
