--- a/predavanja/jupyter/python-sqlite.ipynb
+++ b/predavanja/jupyter/python-sqlite.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "Cannot operate on a closed cursor.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-89237ad4294a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msql\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"SELECT * FROM bbc WHERE region = 'Europe'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mkazalec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m)\u001b[0m        \u001b[0;31m# izvedemo ukaz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m: Cannot operate on a closed cursor."
+     ]
+    }
+   ],
    "source": [
     "sql = \"SELECT * FROM bbc WHERE region = 'Europe'\"\n",
     "kazalec.execute(sql)        # izvedemo ukaz"
@@ -54,9 +66,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Albania\n",
+      "Andorra\n",
+      "Armenia\n",
+      "Austria\n",
+      "Azerbaijan\n",
+      "Belarus\n",
+      "Belgium\n",
+      "Bosnia-Hercegovina\n",
+      "Bulgaria\n",
+      "Croatia\n",
+      "Cyprus\n",
+      "Czech Republic\n",
+      "Denmark\n",
+      "Estonia\n",
+      "Finland\n",
+      "Former Yugoslav Republic of Macedonia\n",
+      "France\n",
+      "Georgia\n",
+      "Germany\n",
+      "Greece\n",
+      "Hungary\n",
+      "Iceland\n",
+      "Ireland\n",
+      "Italy\n",
+      "Latvia\n",
+      "Liechtenstein\n",
+      "Lithuania\n",
+      "Luxembourg\n",
+      "Malta\n",
+      "Moldova\n",
+      "Monaco\n",
+      "Norway\n",
+      "Poland\n",
+      "Portugal\n",
+      "Romania\n",
+      "Russia\n",
+      "San Marino\n",
+      "Serbia and Montenegro\n",
+      "Slovakia\n",
+      "Slovenia\n",
+      "Spain\n",
+      "Sweden\n",
+      "Switzerland\n",
+      "The Netherlands\n",
+      "Turkey\n",
+      "Ukraine\n",
+      "United Kingdom\n",
+      "Vatican\n"
+     ]
+    }
+   ],
    "source": [
     "zapisi = kazalec.fetchall() # preberemo tabelo z rezultati\n",
     "for vrstica in zapisi:\n",
@@ -65,9 +132,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Albania', 'Europe', 28728, 3200000, 6656000000),\n",
+       " ('Andorra', 'Europe', 468, 64000, None),\n",
+       " ('Armenia', 'Europe', 29743, 3000000, 3360000000),\n",
+       " ('Austria', 'Europe', 83871, 8100000, 261630000000),\n",
+       " ('Azerbaijan', 'Europe', 86600, 8500000, None),\n",
+       " ('Belarus', 'Europe', 207595, 9800000, 20776000000),\n",
+       " ('Belgium', 'Europe', 30528, 10300000, 319609000000),\n",
+       " ('Bosnia-Hercegovina', 'Europe', 51129, 4200000, 8568000000),\n",
+       " ('Bulgaria', 'Europe', 110994, 7800000, 21372000000),\n",
+       " ('Croatia', 'Europe', 56594, 4400000, 28996000000),\n",
+       " ('Cyprus', 'Europe', 9250, 807000, 14187060000),\n",
+       " ('Czech Republic', 'Europe', 78866, 10200000, 93330000000),\n",
+       " ('Denmark', 'Europe', 43098, 5400000, 219510000000),\n",
+       " ('Estonia', 'Europe', 45227, 1300000, 9113000000),\n",
+       " ('Finland', 'Europe', 338145, 5200000, 170508000000),\n",
+       " ('Former Yugoslav Republic of Macedonia',\n",
+       "  'Europe',\n",
+       "  25713,\n",
+       "  2000000,\n",
+       "  4700000000),\n",
+       " ('France', 'Europe', 543965, 60700000, 1826463000000),\n",
+       " ('Georgia', 'Europe', 69700, 5000000, 5200000000),\n",
+       " ('Germany', 'Europe', 357027, 82500000, 2484900000000),\n",
+       " ('Greece', 'Europe', 131957, 11000000, 182710000000),\n",
+       " ('Hungary', 'Europe', 93030, 9800000, 81046000000),\n",
+       " ('Iceland', 'Europe', 103000, 294000, 11354280000),\n",
+       " ('Ireland', 'Europe', 70182, 4000000, 137120000000),\n",
+       " ('Italy', 'Europe', 301338, 57200000, 1494064000000),\n",
+       " ('Latvia', 'Europe', 64589, 2300000, None),\n",
+       " ('Liechtenstein', 'Europe', 160, 34000, None),\n",
+       " ('Lithuania', 'Europe', 65300, 3400000, 19516000000),\n",
+       " ('Luxembourg', 'Europe', 2586, 465000, 26146950000),\n",
+       " ('Malta', 'Europe', 316, 397000, 4863250000),\n",
+       " ('Moldova', 'Europe', 33800, 4300000, 3053000000),\n",
+       " ('Monaco', 'Europe', 2, 32000, None),\n",
+       " ('Norway', 'Europe', 323759, 4600000, 239338000000),\n",
+       " ('Poland', 'Europe', 312685, 38500000, 234465000000),\n",
+       " ('Portugal', 'Europe', 92345, 10500000, 150675000000),\n",
+       " ('Romania', 'Europe', 238391, 22200000, 64824000000),\n",
+       " ('Russia', 'Europe', 17000000, 141500000, 482515000000),\n",
+       " ('San Marino', 'Europe', 61, 27000, None),\n",
+       " ('Serbia and Montenegro', 'Europe', 102173, 10500000, 27510000000),\n",
+       " ('Slovakia', 'Europe', 49033, 5400000, 34992000000),\n",
+       " ('Slovenia', 'Europe', 20273, 2000000, 29620000000),\n",
+       " ('Spain', 'Europe', 505988, 44100000, 935361000000),\n",
+       " ('Sweden', 'Europe', 449964, 8900000, 318353000000),\n",
+       " ('Switzerland', 'Europe', 41284, 7100000, 342433000000),\n",
+       " ('The Netherlands', 'Europe', 41864, 16300000, 516710000000),\n",
+       " ('Turkey', 'Europe', 779452, 73300000, 274875000000),\n",
+       " ('Ukraine', 'Europe', 603700, 47800000, 60228000000),\n",
+       " ('United Kingdom', 'Europe', 242514, 59600000, 2022824000000),\n",
+       " ('Vatican', 'Europe', 0, None, None)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "zapisi"
    ]
@@ -81,9 +210,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Albania 28728\n",
+      "Andorra 468\n",
+      "Armenia 29743\n",
+      "Austria 83871\n",
+      "Azerbaijan 86600\n",
+      "Belarus 207595\n",
+      "Belgium 30528\n",
+      "Bosnia-Hercegovina 51129\n",
+      "Bulgaria 110994\n",
+      "Croatia 56594\n",
+      "Cyprus 9250\n",
+      "Czech Republic 78866\n",
+      "Denmark 43098\n",
+      "Estonia 45227\n",
+      "Finland 338145\n",
+      "Former Yugoslav Republic of Macedonia 25713\n",
+      "France 543965\n",
+      "Georgia 69700\n",
+      "Germany 357027\n",
+      "Greece 131957\n",
+      "Hungary 93030\n",
+      "Iceland 103000\n",
+      "Ireland 70182\n",
+      "Italy 301338\n",
+      "Latvia 64589\n",
+      "Liechtenstein 160\n",
+      "Lithuania 65300\n",
+      "Luxembourg 2586\n",
+      "Malta 316\n",
+      "Moldova 33800\n",
+      "Monaco 2\n",
+      "Norway 323759\n",
+      "Poland 312685\n",
+      "Portugal 92345\n",
+      "Romania 238391\n",
+      "Russia 17000000\n",
+      "San Marino 61\n",
+      "Serbia and Montenegro 102173\n",
+      "Slovakia 49033\n",
+      "Slovenia 20273\n",
+      "Spain 505988\n",
+      "Sweden 449964\n",
+      "Switzerland 41284\n",
+      "The Netherlands 41864\n",
+      "Turkey 779452\n",
+      "Ukraine 603700\n",
+      "United Kingdom 242514\n",
+      "Vatican 0\n"
+     ]
+    }
+   ],
    "source": [
     "for ime, regija, povrsina, prebivalstvo, bdp in kazalec:\n",
     "    print(ime, povrsina)"
@@ -98,18 +282,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "Cannot operate on a closed cursor.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-4eb950dff5c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkazalec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchone\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m: Cannot operate on a closed cursor."
+     ]
+    }
+   ],
    "source": [
     "kazalec.fetchone()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Bosnia-Hercegovina', 'Europe', 51129, 4200000, 8568000000)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "next(kazalec)"
    ]
@@ -123,9 +330,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bulgaria 21372000000\n",
+      "Croatia 28996000000\n",
+      "Cyprus 14187060000\n",
+      "Czech Republic 93330000000\n",
+      "Denmark 219510000000\n",
+      "Estonia 9113000000\n",
+      "Finland 170508000000\n",
+      "Former Yugoslav Republic of Macedonia 4700000000\n",
+      "France 1826463000000\n",
+      "Georgia 5200000000\n",
+      "Germany 2484900000000\n",
+      "Greece 182710000000\n",
+      "Hungary 81046000000\n",
+      "Iceland 11354280000\n",
+      "Ireland 137120000000\n",
+      "Italy 1494064000000\n",
+      "Latvia None\n",
+      "Liechtenstein None\n",
+      "Lithuania 19516000000\n",
+      "Luxembourg 26146950000\n",
+      "Malta 4863250000\n",
+      "Moldova 3053000000\n",
+      "Monaco None\n",
+      "Norway 239338000000\n",
+      "Poland 234465000000\n",
+      "Portugal 150675000000\n",
+      "Romania 64824000000\n",
+      "Russia 482515000000\n",
+      "San Marino None\n",
+      "Serbia and Montenegro 27510000000\n",
+      "Slovakia 34992000000\n",
+      "Slovenia 29620000000\n",
+      "[('Spain', 'Europe', 505988, 44100000, 935361000000), ('Sweden', 'Europe', 449964, 8900000, 318353000000), ('Switzerland', 'Europe', 41284, 7100000, 342433000000), ('The Netherlands', 'Europe', 41864, 16300000, 516710000000), ('Turkey', 'Europe', 779452, 73300000, 274875000000)]\n",
+      "[('Ukraine', 'Europe', 603700, 47800000, 60228000000), ('United Kingdom', 'Europe', 242514, 59600000, 2022824000000), ('Vatican', 'Europe', 0, None, None)]\n"
+     ]
+    }
+   ],
    "source": [
     "for ime, *_, bdp in kazalec:\n",
     "    print(ime, bdp)\n",
@@ -139,12 +387,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nazadnje zaprimo kurzor in povezavo na bazo."
+    "Nazadnje zaprimo kazalec in povezavo na bazo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kurzor in povezava sta ostala odprta, tako da ju na koncu zapremo."
+    "Kazalec in povezava sta ostala odprta, tako da ju na koncu zapremo."
    ]
   },
   {
