--- a/predavanja/jupyter/python-sqlite.ipynb
+++ b/predavanja/jupyter/python-sqlite.ipynb
@@ -409,9 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 100, 'KU-KU')\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3 as dbapi\n",
     "# Povežemo se na novo bazo - s tem jo ustvarimo\n",
@@ -446,9 +454,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 100, 'KU-KU')\n",
+      "Zapiramo kazalec\n",
+      "Prišlo je do napake: UNIQUE constraint failed: test.id!\n",
+      "None\n",
+      "Zapiramo povezavo z bazo\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3 as dbapi\n",
     "# Povežemo se na novo bazo - s tem jo ustvarimo\n",
@@ -503,9 +523,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Napaka: UNIQUE constraint failed: test.id\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3 as dbapi\n",
     "conn = dbapi.connect(\"testdb.sqlite\")\n",
@@ -531,9 +559,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 100, 'KU-KU')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur.execute(\"SELECT * FROM test;\")\n",
     "cur.fetchall()"
@@ -548,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,16 +631,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Slovenia', 'Europe', 20273, 2000000, 29620000000)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "drzava(conn, 'Slovenia')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,16 +669,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Albania', 'Europe', 28728, 3200000, 6656000000),\n",
+       " ('Armenia', 'Europe', 29743, 3000000, 3360000000),\n",
+       " ('Austria', 'Europe', 83871, 8100000, 261630000000),\n",
+       " ('Azerbaijan', 'Europe', 86600, 8500000, None),\n",
+       " ('Belarus', 'Europe', 207595, 9800000, 20776000000),\n",
+       " ('Benin', 'Africa', 112622, 7100000, 3763000000),\n",
+       " ('Bhutan', 'South Asia', 38364, 2400000, 1824000000),\n",
+       " ('Bolivia', 'South America', 1100000, 9100000, None),\n",
+       " ('Bosnia-Hercegovina', 'Europe', 51129, 4200000, 8568000000),\n",
+       " ('Botswana', 'Africa', 581730, 1800000, 7812000000),\n",
+       " ('Bulgaria', 'Europe', 110994, 7800000, 21372000000),\n",
+       " ('Burundi', 'Africa', 27816, 7300000, None),\n",
+       " ('Central African Republic', 'Africa', 622984, 3900000, None),\n",
+       " ('Chad', 'Africa', 1280000, 9100000, 2366000000),\n",
+       " ('Costa Rica', 'Americas', 51100, 4300000, None),\n",
+       " ('Croatia', 'Europe', 56594, 4400000, 28996000000),\n",
+       " ('Denmark', 'Europe', 43098, 5400000, 219510000000),\n",
+       " ('Dominican Republic', 'Americas', 48072, 9000000, None),\n",
+       " ('El Salvador', 'Americas', 21041, 6700000, 15745000000),\n",
+       " ('Eritrea', 'Africa', 117400, 4561599, None),\n",
+       " ('Estonia', 'Europe', 45227, 1300000, 9113000000),\n",
+       " ('Finland', 'Europe', 338145, 5200000, 170508000000),\n",
+       " ('Former Yugoslav Republic of Macedonia',\n",
+       "  'Europe',\n",
+       "  25713,\n",
+       "  2000000,\n",
+       "  4700000000),\n",
+       " ('Gabon', 'Africa', 267667, 1400000, None),\n",
+       " ('Georgia', 'Europe', 69700, 5000000, 5200000000),\n",
+       " ('Guinea', 'Africa', 245857, 8800000, 4048000000),\n",
+       " ('Guinea-Bissau', 'Africa', 36125, 1600000, 256000000),\n",
+       " ('Haiti', 'Americas', 27750, 8500000, None),\n",
+       " ('Honduras', 'Americas', 112492, 7200000, 7416000000),\n",
+       " ('Hungary', 'Europe', 93030, 9800000, 81046000000),\n",
+       " ('Ireland', 'Europe', 70182, 4000000, 137120000000),\n",
+       " ('Israel and Palestinian territories',\n",
+       "  'Middle East',\n",
+       "  20770,\n",
+       "  3800000,\n",
+       "  4256000000),\n",
+       " ('Jamaica', 'Americas', 10991, 2700000, 7830000000),\n",
+       " ('Jordan', 'Middle East', 89342, 5700000, 12198000000),\n",
+       " ('Kuwait', 'Middle East', 17818, 2700000, 48519000000),\n",
+       " ('Kyrgyzstan', 'Asia-Pacific', 199900, 5300000, None),\n",
+       " ('Laos', 'Asia-Pacific', 236800, 5900000, 2301000000),\n",
+       " ('Latvia', 'Europe', 64589, 2300000, None),\n",
+       " ('Lebanon', 'Middle East', 10452, 3800000, 18924000000),\n",
+       " ('Lesotho', 'Africa', 30355, 1800000, 1332000000),\n",
+       " ('Liberia', 'Africa', 99067, 3600000, 396000000),\n",
+       " ('Libya', 'Africa', 1770000, 5800000, 25810000000),\n",
+       " ('Lithuania', 'Europe', 65300, 3400000, 19516000000),\n",
+       " ('Mauritania', 'Middle East', 1040000, 3100000, 1302000000),\n",
+       " ('Mauritius', 'Africa', 2040, 1200000, 5568000000),\n",
+       " ('Moldova', 'Europe', 33800, 4300000, 3053000000),\n",
+       " ('Mongolia', 'Asia-Pacific', 1560000, 2700000, None),\n",
+       " ('Namibia', 'Africa', 824292, 2000000, 4740000000),\n",
+       " ('New Zealand', 'Asia-Pacific', 270534, 4000000, 81240000000),\n",
+       " ('Nicaragua', 'Americas', 120254, 5700000, 4503000000),\n",
+       " ('Norway', 'Europe', 323759, 4600000, 239338000000),\n",
+       " ('Oman', 'Middle East', 309500, 3000000, 23670000000),\n",
+       " ('Panama', 'Americas', 75517, 3200000, None),\n",
+       " ('Papua New Guinea', 'Asia-Pacific', 462840, 5900000, 3422000000),\n",
+       " ('Paraguay', 'South America', 406752, 6200000, None),\n",
+       " ('Republic of Congo', 'Africa', 342000, 3039126, None),\n",
+       " ('Rwanda', 'Africa', 26338, 8600000, 1892000000),\n",
+       " ('Sierra Leone', 'Africa', 71740, 5300000, 1060000000),\n",
+       " ('Singapore', 'Asia-Pacific', 660, 4400000, 106568000000),\n",
+       " ('Slovakia', 'Europe', 49033, 5400000, 34992000000),\n",
+       " ('Slovenia', 'Europe', 20273, 2000000, 29620000000),\n",
+       " ('Swaziland', 'Africa', 17364, 1100000, 1826000000),\n",
+       " ('Sweden', 'Europe', 449964, 8900000, 318353000000),\n",
+       " ('Switzerland', 'Europe', 41284, 7100000, 342433000000),\n",
+       " ('Tajikistan', 'Asia-Pacific', 143100, 6300000, None),\n",
+       " ('The Gambia', 'Africa', 11295, 1500000, None),\n",
+       " ('Togo', 'Africa', 56785, 5100000, 1938000000),\n",
+       " ('Trinidad and Tobago', 'Americas', 5128, 1300000, None),\n",
+       " ('Tunisia', 'Middle East', 164150, 10000000, 26300000000),\n",
+       " ('Turkmenistan', 'Asia-Pacific', 488100, 5000000, None),\n",
+       " ('United Arab Emirates', 'Middle East', 77700, 3100000, None),\n",
+       " ('Uruguay', 'South America', 176215, 3500000, None)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prebivalstvo(conn, 1000000, 10000000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,16 +787,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Algeria', 'Middle East', 2400000, 32900000, 75012000000),\n",
+       " ('Argentina', 'South America', 2800000, 39300000, 146196000000),\n",
+       " ('Australia', 'Asia-Pacific', 7700000, 20300000, 546070000000),\n",
+       " ('Brazil', 'South America', 8550000, 182800000, 564852000000),\n",
+       " ('Canada', 'North America', 9900000, 32000000, 908480000000),\n",
+       " ('China', 'Asia-Pacific', 9600000, 1300000000, 1677000000000),\n",
+       " ('Democratic Republic of Congo', 'Africa', 2340000, 56000000, 6720000000),\n",
+       " ('India', 'South Asia', 3100000, 1100000000, 682000000000),\n",
+       " ('Kazakhstan', 'Asia-Pacific', 2700000, 15400000, None),\n",
+       " ('Russia', 'Europe', 17000000, 141500000, 482515000000),\n",
+       " ('Saudi Arabia', 'Middle East', 2240000, 25600000, 267008000000),\n",
+       " ('Sudan', 'Middle East', 2500000, 35000000, 18550000000),\n",
+       " ('United States of America',\n",
+       "  'North America',\n",
+       "  9800000,\n",
+       "  295000000,\n",
+       "  12213000000000)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prebivalstvo_povrsina(conn, 2000000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,9 +850,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              DROP TABLE IF EXISTS uporabnik;\n",
+      "\n",
+      "              CREATE TABLE uporabnik (\n",
+      "                id              integer PRIMARY KEY AUTOINCREMENT,\n",
+      "                uporabnisko_ime text    NOT NULL UNIQUE,\n",
+      "                geslo           text    NOT NULL,\n",
+      "                admin           integer NOT NULL DEFAULT 0\n",
+      "              );\n",
+      "BEGIN \n",
+      "\n",
+      "              INSERT INTO uporabnik (uporabnisko_ime, geslo, admin)\n",
+      "              VALUES ('admin', '$kr1wn0G35l0', 1)\n",
+      "            \n",
+      "\n",
+      "              INSERT INTO uporabnik (uporabnisko_ime, geslo, admin)\n",
+      "              VALUES ('janez', 'geslo123', 0)\n",
+      "            \n",
+      "COMMIT\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3 as dbapi\n",
     "conn = dbapi.connect(\"testdb.sqlite\")\n",
@@ -721,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,27 +940,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              SELECT id, admin FROM uporabnik\n",
+      "               WHERE uporabnisko_ime = 'janez' AND\n",
+      "                     geslo = 'geslo123';\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 0)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prijava_slaba(conn, 'janez', 'geslo123')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              SELECT id, admin FROM uporabnik\n",
+      "               WHERE uporabnisko_ime = 'janez' AND\n",
+      "                     geslo = 'napacno_geslo';\n"
+     ]
+    }
+   ],
    "source": [
     "prijava_slaba(conn, 'janez', 'napacno_geslo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              SELECT id, admin FROM uporabnik\n",
+      "               WHERE uporabnisko_ime = 'micka' AND\n",
+      "                     geslo = 'geslo123';\n"
+     ]
+    }
+   ],
    "source": [
     "prijava_slaba(conn, 'micka', 'geslo123')"
    ]
@@ -781,9 +1017,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              SELECT id, admin FROM uporabnik\n",
+      "               WHERE uporabnisko_ime = 'admin' OR 0 AND --' AND\n",
+      "                     geslo = '';\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prijava_slaba(conn, \"admin' OR 0 AND --\", \"\")"
    ]
@@ -797,9 +1054,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "near \"lce\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-d166320ae54c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprijava_slaba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"franci\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ges'lce\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-21-309431ea066c>\u001b[0m in \u001b[0;36mprijava_slaba\u001b[0;34m(conn, uporabnisko_ime, geslo)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         cur.execute(f\"\"\"\n\u001b[0m\u001b[1;32m      5\u001b[0m               \u001b[0mSELECT\u001b[0m \u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madmin\u001b[0m \u001b[0mFROM\u001b[0m \u001b[0muporabnik\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                \u001b[0mWHERE\u001b[0m \u001b[0muporabnisko_ime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'{uporabnisko_ime}'\u001b[0m \u001b[0mAND\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: near \"lce\": syntax error"
+     ]
+    }
+   ],
    "source": [
     "prijava_slaba(conn, \"franci\", \"ges'lce\")"
    ]
@@ -813,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,52 +1102,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              SELECT id, admin FROM uporabnik\n",
+      "               WHERE uporabnisko_ime = 'janez' AND\n",
+      "                     geslo = 'geslo123';\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 0)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prijava_dobra(conn, 'janez', 'geslo123')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              SELECT id, admin FROM uporabnik\n",
+      "               WHERE uporabnisko_ime = 'janez' AND\n",
+      "                     geslo = 'napacno_geslo';\n"
+     ]
+    }
+   ],
    "source": [
     "prijava_dobra(conn, 'janez', 'napacno_geslo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              SELECT id, admin FROM uporabnik\n",
+      "               WHERE uporabnisko_ime = 'micka' AND\n",
+      "                     geslo = 'geslo123';\n"
+     ]
+    }
+   ],
    "source": [
     "prijava_dobra(conn, 'micka', 'geslo123')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              SELECT id, admin FROM uporabnik\n",
+      "               WHERE uporabnisko_ime = 'admin'' OR 0 AND --' AND\n",
+      "                     geslo = '';\n"
+     ]
+    }
+   ],
    "source": [
     "prijava_dobra(conn, \"admin' OR 0 AND --\", \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "              SELECT id, admin FROM uporabnik\n",
+      "               WHERE uporabnisko_ime = 'franci' AND\n",
+      "                     geslo = 'ges''lce';\n"
+     ]
+    }
+   ],
    "source": [
     "prijava_dobra(conn, \"franci\", \"ges'lce\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
