Uporabljene relativne poti

--- a/predavanja/jupyter/bottle.ipynb
+++ b/predavanja/jupyter/bottle.ipynb
@@ -119,9 +119,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bottle v0.13-dev server starting up (using WSGIRefServer())...\n",
+      "Listening on http://127.0.0.1:8080/\n",
+      "Hit Ctrl-C to quit.\n",
+      "\n",
+      "127.0.0.1 - - [14/Dec/2023 11:20:04] \"GET /kvadriraj/42 HTTP/1.1\" 200 11\n",
+      "127.0.0.1 - - [14/Dec/2023 11:20:07] \"GET /obrazec HTTP/1.1\" 200 573\n",
+      "127.0.0.1 - - [14/Dec/2023 11:20:11] \"POST /obrazec HTTP/1.1\" 303 0\n",
+      "127.0.0.1 - - [14/Dec/2023 11:20:11] \"GET /obrazec HTTP/1.1\" 200 593\n",
+      "127.0.0.1 - - [14/Dec/2023 11:20:13] \"GET / HTTP/1.1\" 200 343\n",
+      "127.0.0.1 - - [14/Dec/2023 11:20:15] \"GET /pozdravi/janos/ HTTP/1.1\" 200 30\n",
+      "127.0.0.1 - - [14/Dec/2023 11:20:19] \"GET /pozdravi_predloga/janos/ HTTP/1.1\" 200 145\n",
+      "127.0.0.1 - - [14/Dec/2023 11:20:21] \"GET /kvadriraj/5 HTTP/1.1\" 200 8\n"
+     ]
+    }
+   ],
    "source": [
     "import bottle\n",
     "\n",
@@ -132,8 +151,9 @@
     "    return bottle.static_file(datoteka, root='static')\n",
     "\n",
     "@bottle.get('/')\n",
-    "def pozdravi_svet():\n",
-    "    return 'Pozdravljen, svet!'\n",
+    "def index():\n",
+    "    uporabnik = bottle.request.get_cookie('uporabnik', secret=SKRIVNOST)\n",
+    "    return bottle.template('index.html', uporabnik=uporabnik)\n",
     "\n",
     "@bottle.get('/pozdravi/<ime>/')\n",
     "def pozdravi(ime):\n",
