Dodana povezava za zagon iz Binderja

--- a/predavanja/jupyter/bottle.ipynb
+++ b/predavanja/jupyter/bottle.ipynb
@@ -119,32 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Bottle v0.13-dev server starting up (using WSGIRefServer())...\n",
-      "Listening on http://127.0.0.1:8080/\n",
-      "Hit Ctrl-C to quit.\n",
-      "\n",
-      "127.0.0.1 - - [14/Dec/2023 11:20:04] \"GET /kvadriraj/42 HTTP/1.1\" 200 11\n",
-      "127.0.0.1 - - [14/Dec/2023 11:20:07] \"GET /obrazec HTTP/1.1\" 200 573\n",
-      "127.0.0.1 - - [14/Dec/2023 11:20:11] \"POST /obrazec HTTP/1.1\" 303 0\n",
-      "127.0.0.1 - - [14/Dec/2023 11:20:11] \"GET /obrazec HTTP/1.1\" 200 593\n",
-      "127.0.0.1 - - [14/Dec/2023 11:20:13] \"GET / HTTP/1.1\" 200 343\n",
-      "127.0.0.1 - - [14/Dec/2023 11:20:15] \"GET /pozdravi/janos/ HTTP/1.1\" 200 30\n",
-      "127.0.0.1 - - [14/Dec/2023 11:20:19] \"GET /pozdravi_predloga/janos/ HTTP/1.1\" 200 145\n",
-      "127.0.0.1 - - [14/Dec/2023 11:20:21] \"GET /kvadriraj/5 HTTP/1.1\" 200 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import bottle\n",
+    "import os\n",
+    "from IPython.display import display, Markdown\n",
     "\n",
     "SKRIVNOST = 'nekaj, kar bo zelo težko uganiti!!!! djnskfndkjfnsd'\n",
+    "BOTTLE_PORT = 8080\n",
     "\n",
     "@bottle.get('/static/<datoteka:path>')\n",
     "def static(datoteka):\n",
@@ -193,7 +177,10 @@
     "    b = bottle.request.query.b\n",
     "    return f'{a} + {b} = {a + b}'\n",
     "\n",
-    "bottle.run(debug=True)"
+    "prefix = os.environ.get('JUPYTERHUB_SERVICE_PREFIX')\n",
+    "if prefix:\n",
+    "    display(Markdown(f\"[Klikni za zagon aplikacije]({prefix}/proxy/{BOTTLE_PORT}/)\"))\n",
+    "bottle.run(debug=True, port=BOTTLE_PORT)"
    ]
   }
  ],
