Popravek relativnih poti

--- a/predavanja/jupyter/bottle.ipynb
+++ b/predavanja/jupyter/bottle.ipynb
@@ -155,21 +155,21 @@
     "def primer():\n",
     "    return bottle.template('primer.html')\n",
     "\n",
-    "@bottle.get('/obrazec')\n",
+    "@bottle.get('/obrazec/')\n",
     "def obrazec():\n",
     "    uporabnik = bottle.request.get_cookie('uporabnik', secret=SKRIVNOST)\n",
     "    return bottle.template('obrazec.html', uporabnik=uporabnik)\n",
     "\n",
-    "@bottle.post('/obrazec')\n",
+    "@bottle.post('/obrazec/')\n",
     "def obrazec_post():\n",
     "    uporabnik = bottle.request.forms.uporabnik\n",
     "    bottle.response.set_cookie('uporabnik', uporabnik, secret=SKRIVNOST, path='/')\n",
-    "    bottle.redirect('/obrazec')\n",
+    "    bottle.redirect('/obrazec/')\n",
     "\n",
-    "@bottle.post('/odjava')\n",
+    "@bottle.post('/odjava/')\n",
     "def odjava():\n",
     "    bottle.response.delete_cookie('uporabnik', path='/')\n",
-    "    bottle.redirect('/obrazec')\n",
+    "    bottle.redirect('/obrazec/')\n",
     "\n",
     "@bottle.get('/sestej/')\n",
     "def sestej():\n",
