Popravek relativnih poti, drugič

--- a/predavanja/jupyter/bottle.ipynb
+++ b/predavanja/jupyter/bottle.ipynb
@@ -119,9 +119,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bottle v0.13-dev server starting up (using WSGIRefServer())...\n",
+      "Listening on http://127.0.0.1:8080/\n",
+      "Hit Ctrl-C to quit.\n",
+      "\n",
+      "127.0.0.1 - - [15/Dec/2023 12:57:59] \"GET /obrazec/ HTTP/1.1\" 405 747\n",
+      "127.0.0.1 - - [15/Dec/2023 12:58:01] \"GET / HTTP/1.1\" 200 343\n",
+      "127.0.0.1 - - [15/Dec/2023 12:58:02] \"GET /obrazec HTTP/1.1\" 200 575\n",
+      "127.0.0.1 - - [15/Dec/2023 12:58:05] \"GET /sestej/?a=2&b=3 HTTP/1.1\" 200 10\n",
+      "127.0.0.1 - - [15/Dec/2023 12:58:10] \"POST /obrazec/ HTTP/1.1\" 303 0\n",
+      "127.0.0.1 - - [15/Dec/2023 12:58:10] \"GET /obrazec/ HTTP/1.1\" 405 747\n",
+      "127.0.0.1 - - [15/Dec/2023 12:58:14] \"POST /obrazec/ HTTP/1.1\" 303 0\n",
+      "127.0.0.1 - - [15/Dec/2023 12:58:14] \"GET /obrazec/ HTTP/1.1\" 405 747\n"
+     ]
+    }
+   ],
    "source": [
     "import bottle\n",
     "import os\n",
@@ -155,7 +174,7 @@
     "def primer():\n",
     "    return bottle.template('primer.html')\n",
     "\n",
-    "@bottle.get('/obrazec/')\n",
+    "@bottle.get('/obrazec')\n",
     "def obrazec():\n",
     "    uporabnik = bottle.request.get_cookie('uporabnik', secret=SKRIVNOST)\n",
     "    return bottle.template('obrazec.html', uporabnik=uporabnik)\n",
@@ -164,12 +183,12 @@
     "def obrazec_post():\n",
     "    uporabnik = bottle.request.forms.uporabnik\n",
     "    bottle.response.set_cookie('uporabnik', uporabnik, secret=SKRIVNOST, path='/')\n",
-    "    bottle.redirect('/obrazec/')\n",
+    "    bottle.redirect('/obrazec')\n",
     "\n",
     "@bottle.post('/odjava/')\n",
     "def odjava():\n",
     "    bottle.response.delete_cookie('uporabnik', path='/')\n",
-    "    bottle.redirect('/obrazec/')\n",
+    "    bottle.redirect('/obrazec')\n",
     "\n",
     "@bottle.get('/sestej/')\n",
     "def sestej():\n",
