Ne gre drugače kot z absolutno potjo pri preusmeritvi

--- a/predavanja/jupyter/bottle.ipynb
+++ b/predavanja/jupyter/bottle.ipynb
@@ -125,10 +125,11 @@
    "source": [
     "import bottle\n",
     "import os\n",
-    "from IPython.display import display, Markdown\n",
     "\n",
     "SKRIVNOST = 'nekaj, kar bo zelo težko uganiti!!!! djnskfndkjfnsd'\n",
     "BOTTLE_PORT = 8080\n",
+    "PREFIX = os.environ.get('JUPYTERHUB_SERVICE_PREFIX')\n",
+    "APP_PREFIX = f'{PREFIX}/proxy/{BOTTLE_PORT}' if PREFIX else ''\n",
     "\n",
     "@bottle.get('/static/<datoteka:path>')\n",
     "def static(datoteka):\n",
@@ -164,12 +165,12 @@
     "def obrazec_post():\n",
     "    uporabnik = bottle.request.forms.uporabnik\n",
     "    bottle.response.set_cookie('uporabnik', uporabnik, secret=SKRIVNOST, path='/')\n",
-    "    bottle.redirect('/obrazec')\n",
+    "    bottle.redirect(APP_PREFIX + '/obrazec')\n",
     "\n",
     "@bottle.post('/odjava/')\n",
     "def odjava():\n",
     "    bottle.response.delete_cookie('uporabnik', path='/')\n",
-    "    bottle.redirect('/obrazec')\n",
+    "    bottle.redirect(APP_PREFIX + '/obrazec')\n",
     "\n",
     "@bottle.get('/sestej/')\n",
     "def sestej():\n",
@@ -177,9 +178,9 @@
     "    b = bottle.request.query.b\n",
     "    return f'{a} + {b} = {a + b}'\n",
     "\n",
-    "prefix = os.environ.get('JUPYTERHUB_SERVICE_PREFIX')\n",
-    "if prefix:\n",
-    "    display(Markdown(f\"[Klikni za zagon aplikacije]({prefix}/proxy/{BOTTLE_PORT}/)\"))\n",
+    "if PREFIX:\n",
+    "    from IPython.display import display, Markdown\n",
+    "    display(Markdown(f\"[Klikni za zagon aplikacije]({APP_PREFIX})\"))\n",
     "bottle.run(debug=True, port=BOTTLE_PORT)"
    ]
   }
