Popravek poti, zadnjič

--- a/predavanja/jupyter/bottle.ipynb
+++ b/predavanja/jupyter/bottle.ipynb
@@ -180,7 +180,7 @@
     "\n",
     "if PREFIX:\n",
     "    from IPython.display import display, Markdown\n",
-    "    display(Markdown(f\"[Klikni za zagon aplikacije]({APP_PREFIX})\"))\n",
+    "    display(Markdown(f\"[Klikni za zagon aplikacije]({APP_PREFIX}/)\"))\n",
     "bottle.run(debug=True, port=BOTTLE_PORT)"
    ]
   }
