Začetno ogrodje spletne aplikacije

--- a/predavanja/jupyter/bottle.ipynb
+++ b/predavanja/jupyter/bottle.ipynb
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vsota_pocasna?"
+    "vsota_pocasna??"
    ]
   },
   {
@@ -141,18 +141,23 @@
     "    return bottle.template('index.html', uporabnik=uporabnik)\n",
     "\n",
     "@bottle.get('/pozdravi/<ime>/')\n",
-    "def pozdravi(ime):\n",
-    "    return f'Živjo, <strong>{ime}<strong>!'\n",
+    "@bottle.get('/pozdravi/<ime>/<priimek>/')\n",
+    "def pozdravi(ime, priimek=None):\n",
+    "    imepriimek = ime if priimek is None else f'{ime} {priimek}'\n",
+    "    return f'Živjo, <strong>{imepriimek}</strong>!'\n",
     "\n",
+    "@bottle.get('/kvadriraj/<n:float>')\n",
     "@bottle.get('/kvadriraj/<n:int>')\n",
     "def kvadriraj(n):\n",
     "    return f'{n}^2 = {n**2}'\n",
     "\n",
     "@bottle.get('/pozdravi_predloga/<ime>/')\n",
+    "@bottle.view('pozdravi.html')\n",
     "def pozdravi_predloga(ime):\n",
-    "    return bottle.template('pozdravi.html', ime=ime)\n",
+    "    return dict(ime=ime)\n",
     "\n",
     "@bottle.get('/primer')\n",
+    "@bottle.get('/primer/')\n",
     "def primer():\n",
     "    return bottle.template('primer.html')\n",
     "\n",
@@ -174,14 +179,32 @@
     "\n",
     "@bottle.get('/sestej/')\n",
     "def sestej():\n",
-    "    a = bottle.request.query.a\n",
-    "    b = bottle.request.query.b\n",
-    "    return f'{a} + {b} = {a + b}'\n",
+    "    try:\n",
+    "        a = int(bottle.request.query.a)\n",
+    "        b = int(bottle.request.query.b)\n",
+    "        return f'{a} + {b} = {a + b}'\n",
+    "    except ValueError:\n",
+    "        bottle.abort(400, \"Vnesi dve celi števili!\")\n",
+    "\n",
+    "bottle.BaseTemplate.defaults['povecaj'] = lambda x: x+1\n",
     "\n",
     "if PREFIX:\n",
     "    from IPython.display import display, Markdown\n",
     "    display(Markdown(f\"[Klikni za zagon aplikacije]({APP_PREFIX}/)\"))\n",
     "bottle.run(debug=True, port=BOTTLE_PORT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    bottle.abort(400, \"Vnesi dve celi števili!\")\n",
+    "    print(\"konec\")\n",
+    "except:\n",
+    "    print(\"zgodila se je izjema\")"
    ]
   }
  ],
