Dodani rezultati poganjanja

--- a/predavanja/jupyter/indeksi.ipynb
+++ b/predavanja/jupyter/indeksi.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,18 +73,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None,),\n",
+       " ('CREATE INDEX \"idx_object_alias_alias\" ON \"object_alias\"(\"alias\")',),\n",
+       " ('CREATE INDEX \"idx_object_unique_id_unique_id\" ON \"object_unique_id\"(\"unique_id\")',),\n",
+       " ('CREATE INDEX \"idx_graph_order\" ON \"graph\"(\"order\")',),\n",
+       " ('CREATE INDEX \"idx_graph_average_degree\" ON \"graph\"(\"average_degree\")',),\n",
+       " ('CREATE INDEX \"idx_graph_vt_vt_index\" ON \"graph_vt\"(\"vt_index\")',),\n",
+       " ('CREATE INDEX \"idx_graph_cvt_cvt_index\" ON \"graph_cvt\"(\"cvt_index\")',),\n",
+       " ('CREATE INDEX \"idx_graph_cvt_symcubic_index\" ON \"graph_cvt\"(\"symcubic_index\")',),\n",
+       " ('CREATE UNIQUE INDEX \"idx_object_alias_object_id_alias_unique\" ON \"object_alias\"(\"object_id\", \"alias\")',),\n",
+       " ('CREATE UNIQUE INDEX \"idx_object_unique_id_object_id_algorithm_unique\" ON \"object_unique_id\"(\"object_id\", \"algorithm\")',),\n",
+       " ('CREATE UNIQUE INDEX \"idx_graph_spx_spx_r_spx_s_unique\" ON \"graph_spx\"(\"spx_r\", \"spx_s\")',),\n",
+       " ('CREATE UNIQUE INDEX \"idx_change_zooid_table_column_commit_unique\" ON \"change\"(\"zooid\", \"table\", \"column\", \"commit\")',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c1.execute(\"SELECT sql FROM sqlite_master WHERE type = 'index'\").fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None,),\n",
+       " ('CREATE UNIQUE INDEX \"idx_object_alias_object_id_alias_unique\" ON \"object_alias\"(\"object_id\", \"alias\")',),\n",
+       " ('CREATE UNIQUE INDEX \"idx_object_unique_id_object_id_algorithm_unique\" ON \"object_unique_id\"(\"object_id\", \"algorithm\")',),\n",
+       " ('CREATE UNIQUE INDEX \"idx_graph_spx_spx_r_spx_s_unique\" ON \"graph_spx\"(\"spx_r\", \"spx_s\")',),\n",
+       " ('CREATE UNIQUE INDEX \"idx_change_zooid_table_column_commit_unique\" ON \"change\"(\"zooid\", \"table\", \"column\", \"commit\")',)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c2.execute(\"SELECT sql FROM sqlite_master WHERE type = 'index'\").fetchall()"
    ]
@@ -98,9 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.7 µs ± 6.2 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "156 ms ± 4.48 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "sql = \"\"\"\n",
     "    SELECT COUNT(*) FROM graph WHERE `order` = ?\n",
@@ -117,9 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.4 ms ± 597 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "174 ms ± 7.25 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "sql = \"\"\"\n",
     "    SELECT * FROM graph WHERE `order` = ?\n",
@@ -136,9 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "482 ms ± 14.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "491 ms ± 12.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "sql = \"\"\"\n",
     "    SELECT `order`, AVG(diameter) FROM graph GROUP BY `order`\n",
